--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta property="og:title" content="UMIGOTO SEAPARK2026">
     <meta property="og:description" content="一般社団法人TSURIBITO主催　UMIGOTO SEAPARK2026~遊びが学びに変わる1日~がアスティとくしまで2月11日に開催！海を入口に学びが生まれ、未来が動き出す1日！みなさま、ぜひお越しください。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="https://mama-tokukon.github.io/babykoi2025/img/img_sns-image.png">
+    <meta property="og:url" content="https://otto-web-production.github.io/umigoto_seapark2026/">
+    <meta property="og:image" content="https://otto-web-production.github.io/umigoto_seapark2026/img/sns-image.png">
 
     <!-- Twitterカード -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="UMIGOTO SEAPARK2026">
     <meta name="twitter:description" content="一般社団法人TSURIBITO主催　UMIGOTO SEAPARK2026~遊びが学びに変わる1日~がアスティとくしまで2月11日に開催！海を入口に学びが生まれ、未来が動き出す1日！みなさま、ぜひお越しください。">
-    <meta name="twitter:image" content="https://mama-tokukon.github.io/babykoi2025/img/img_sns-image.png">
+    <meta name="twitter:image" content="https://otto-web-production.github.io/umigoto_seapark2026/img/sns-image.png">
 
 
     <link rel="stylesheet" href="./css/style.css">
@@ -520,11 +520,11 @@
                     <div class="sponsor-title">ご協賛企業</div>
 
                     <div class="sponsor-bottom-first sponsor-img ">
-                        <a href="https://www.hondacars-tokushima.co.jp/"><img src="./img/hondacarslogo.png" alt=""></a>
+                        <a href="https://www.hondacars-tokushima.co.jp/" target="_blank" rel="noopener"><img src="./img/hondacarslogo.png" alt=""></a>
                     </div>
                     
                     <div class="sponsor-bottom-first sponsor-img ">
-                        <a href="https://www.raycraft.shop/"><img src="./img/RAYCRAFT 1.png" alt=""></a>
+                        <a href="https://www.raycraft.shop/" target="_blank" rel="noopener"><img src="./img/RAYCRAFT 1.png" alt=""></a>
                     </div>
                     
                     <div class="sponsor-bottom-second">
