--- a/index.html
+++ b/index.html
@@ -335,7 +335,8 @@
                                 株式会社TIDE<br>
                                 kuhkuh<br>
                                 ファンタジーワールド<br>
-                                うさぎとネテルマ
+                                うさぎとネテルマ<br>
+                                うずしおクリーンアップ
                             </div>
                             <div class="main-third-img">
                                 <img src="./img/art1.jpg" alt="">
@@ -361,11 +362,10 @@
                             </div>
                             <div class="main-fourth-text main-body-text">
                                 餌やり体験<br>
-                                海陽町マリンジャムタッチプール<br>
-                                ボトリウム体験<br>
-                                ウキアクセサリー体験<br>
-                                （有限会社エム・アンド・エム）<br>
-                                カラー魚拓（龍精庵）
+                                UMIGOTO出張水族館<br>
+                                海陽町<br>
+                                海洋自然博物館マリンジャム（タッチプール）<br>
+                                有限会社エム・アンド・エム（ウキアクセサリー体験）
                             </div>
                         </div>
                     </div>
@@ -380,10 +380,9 @@
                         <div class="main-fifth-body">
                             <div class="main-fifth-text main-body-text">
                                 住まいのBASE/不動産のBASE<br>
-                                ハレルヤ<br>
                                 徳島県<br>
                                 鳴門市<br>
-                                海陽町
+                                兵庫・徳島「鳴門の渦潮」世界遺産登録推進協議会
                             </div>
                         </div>
                     </div>
@@ -397,7 +396,8 @@
                     <div class="main-body-content">
                         <div class="main-sixth-body">
                             <div class="main-sixth-text main-body-text">
-                                学生服リユースShopさくらや<br>
+                                株式会社ハレルヤ<br>
+                                学生服リユースショップ『さくらや徳島北店』<br>
                                 COLORSインターナショナル<br>
                                 生活協同組合コープ自然派しこく<br>
                                 とくしま生協<br>
@@ -420,38 +420,34 @@
                                 <span class="text-red">抽選券1枚</span>を贈呈！
                                 豪華景品が当たるかも！
                             </div>
-                            <div class="main-seventh-text-bottom">
-                                <div class="main-seventh-text-left">
-                                    ばから<br>
-                                    JA里浦<br>
-                                    ますを商店<br>
-                                    雅<br>
-                                    -TAKAYA-<br>
-                                    sunrise<br>
-                                    いか焼きしんちゃん<br>
-                                    八剣伝 屋外飲食<br>
-                                    大ふへん者<br>
-                                    太田商店 屋外飲食<br>
-                                    BAKINY<br>
-                                    kawauchitown<br>
-                                    三八<br>
-                                    OHANAFOODTRUCK
-                                </div>
-                                <div class="main-seventh-text-right">
-                                    CHA-CHA HOUSE<br>
-                                    サニファモービル<br>
-                                    siotosatou...時々こむぎ。<br>
-                                    TRICARATOPS<br>
-                                    Danran<br>
-                                    SCRAMBLE COFFEE<br>
-                                    たこず<br>
-                                    きたろう<br>
-                                    and TOMOS<br>
-                                    NOA NOA<br>
-                                    武春<br>
-                                    たこ焼きふぅふぅ<br>
-                                    新鮮なっ！とくしま号
-                                </div>
+                            <div class="main-seventh-text-bottom main-body-text">
+                                ばから<br>
+                                JA里浦<br>
+                                ますを商店<br>
+                                雅<br>
+                                -TAKAYA-<br>
+                                sunrise<br>
+                                いか焼きしんちゃん<br>
+                                八剣伝 屋外飲食<br>
+                                大ふへん者<br>
+                                太田商店 屋外飲食<br>
+                                BAKINY<br>
+                                三八<br>
+                                OHANAFOODTRUCK<br>
+                                BRISK STAND TOKUSHIMA<br>
+                                CHA-CHA HOUSE<br>
+                                サニファモービル<br>
+                                siotosatou...時々こむぎ。<br>
+                                TRICARATOPS<br>
+                                Danran<br>
+                                SCRAMBLE COFFEE<br>
+                                たこず<br>
+                                きたろう<br>
+                                and TOMOS<br>
+                                NOA NOA<br>
+                                武春<br>
+                                たこ焼きふぅふぅ<br>
+                                新鮮なっ！とくしま号
                             </div>
                         </div>
                     </div>
@@ -674,7 +670,7 @@
                     <div class="footer-info-title">問い合わせ先</div>
                     <div class="footer-info-name">
                         一般社団法人 TSURIBITO<br>
-                        TEL 070-8366-5442
+                        TEL 080-4861-8878
                     </div>
                     <div class="footer-info-address">
                         徳島県鳴門市撫養町立岩七枚113-3
