--- a/index.html
+++ b/index.html
@@ -207,9 +207,11 @@
 
         <!-- main -->
         <div class="section__main">
-
             <!-- first -->
             <div class="main-body main-first" id="contents">
+                <div class="section__main-top-image">
+                    <img src="./img/main-top-image.png" alt="">
+                </div>
                 <div class="js-animate">
                     <h2 class="main-body-title">1.ステージゾーン</h2>
                     <div class="main-body-content">
@@ -414,12 +416,6 @@
                     <h2 class="main-body-title">7.オーシャンキッチンゾーン</h2>
                     <div class="main-body-content">
                         <div class="main-seventh-body">
-                            <div class="main-seventh-text-top">
-                                オーシャンキッチンで500円以上お買い上げいただくと、
-                                ワクワク大抽選会（午前・午後）に参加できる
-                                <span class="text-red">抽選券1枚</span>を贈呈！
-                                豪華景品が当たるかも！
-                            </div>
                             <div class="main-seventh-text-bottom main-body-text">
                                 ばから<br>
                                 JA里浦<br>
@@ -448,6 +444,27 @@
                                 武春<br>
                                 たこ焼きふぅふぅ<br>
                                 新鮮なっ！とくしま号
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- present -->
+            <div class="main-body main-present">
+                <div class="js-animate">
+                    <div class="main-body-content main-present-content">
+                        <div class="main-present-body main-seventh-body">
+                            <div class="main-seventh-text-top">
+                                会場内のスタンプラリー&クイズをクリアすると
+                                SEA PARK くじにチャレンジできるよ！<br><br>
+                                お買い物やワークショップで500円以上お買い上げいただくと、
+                                ワクワク大抽選会（午前・午後）に参加できる
+                                <span class="text-red">抽選券1枚</span>を贈呈！
+                                豪華景品が当たるかも！
+                            </div>
+                            <div class="main-present-body">
+                                <img src="./img/present.png" alt="">
                             </div>
                         </div>
                     </div>
