--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         })(document);
     </script>
 
+    <meta name="google-site-verification" content="46qcRclI5CapiA3ZYx0fQM74r0YTBFSSYKaUJE6_P5c" />
+
 </head>
 <body>
     <!-- パソコン表示関連 -->
