--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
     </script>
 
     <meta name="google-site-verification" content="46qcRclI5CapiA3ZYx0fQM74r0YTBFSSYKaUJE6_P5c" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G60F49XJMV"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-G60F49XJMV');
+    </script>
 
 </head>
 <body>
